# SDL-runner-game

./: .gitignore  CMakeLists.txt  README.md  additional_functions.cpp  additional_functions.h  background.cpp  background.h  buttons.cpp  buttons.h  filemanager.cpp  filemanager.h  game.cpp  game.h  main.cpp  object.cpp  object.h  player.cpp  player.h  sprite.cpp  sprite.h  text.cpp  text.h  texturemanager.cpp  texturemanager.h
images/Buttons/cross/: cross.aseprite
images/Buttons/exit/: exit.aseprite
images/Buttons/play/: play.aseprite
images/Buttons/save/: save.aseprite
images/Buttons/settings/: settings.aseprite
images/logos/western_runner/: Western_runner-logo.aseprite
